# ModuleDiffing

./: .gitignore  Makefile  ModuleDiffing.opam  README.md  bisect407448625.coverage  bisect861280135.coverage  cost.ml  cost.mli  diffing.ml  diffing.mli  dune-project  edit_script.ml  graph.ml  graph.mli  graphs.ml  graphs.mli  main.ml  pruning.ml  pruning.mli  sig.ml  sig.mli  test.ml  test_edit_script.ml  test_manager.ml  test_prune.py
.github/workflows/: config.yml
DictionaryDiffing/: Makefile  display.ml  lexer.mll  main.ml  parser.mly  patch.ml
DictionaryDiffing/examples/: d1.txt
ModuleParsing/astparser/: dune-project
ModuleParsing/astparser/lib/: dune
ModuleParsing/astparser/test/: dune
StringDiffing/: .gitignore  damereau_levenstein.ml  jacard.ml  jaccard.ml  jaro_winkler.ml  main.ml
StringDiffing/examples/: chiens_niches.txt  dwayne_duane.txt  little_littel.txt
lib/: astsimplifier.ml  cost.ml  cost.mli  dico.ml  dico.mli  diffing.ml  diffing.mli  dune  edge_cover.ml  edge_cover.mli  edit_script.ml  example.ml  hungarian_method.ml  hungarian_method.mli  label.ml  label.mli  opt.ml  pruning.ml  pruning.mli  sig.ml  sig.mli  test.ml
lib/DictionaryDiffing/: README.md  dict.ml  diffing.ml  patch.ml
lib/StringDiffing/: Makefile  README.md  damerau_levenshtein.ml  myers.ml
lib/StringDiffing/examples/: aleksander_alexandre.txt  context_contact.txt  dixon_dicksonx.txt  drake_cake.txt  martha_marhta.txt  night_nacht.txt  sitting_kitchen.txt
test/: dune  test_diffing.ml  test_edge_cover.ml  test_hungarian_method.ml  test_pruning.ml
